Closed Bug 1645067 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::a11y::DocAccessibleChild::GetNativeWindowHandle]

Categories

(Core :: Disability Access APIs, defect, P1)

Unspecified
Windows
defect

Tracking

()

VERIFIED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox77 --- unaffected
firefox78 --- unaffected
firefox79 + verified

People

(Reporter: RyanVM, Assigned: Jamie)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-a87a0edb-4014-4420-ae5c-e64150200611.

This first regressed in the 20200610214041 build. Pushlog range:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=b2df79a80c03&tochange=fab7c4f54054ceb06504c7ddac380858e2521fc4

Top 10 frames of crashing thread:

0 xul.dll mozilla::a11y::DocAccessibleChild::GetNativeWindowHandle const accessible/ipc/win/DocAccessibleChild.cpp:94
1 xul.dll static mozilla::a11y::AccessibleWrap::GetHWNDFor accessible/windows/msaa/AccessibleWrap.cpp:1280
2 xul.dll mozilla::a11y::ia2Accessible::get_windowHandle accessible/windows/ia2/ia2Accessible.cpp:354
3 xul.dll mozilla::a11y::HandlerProvider::BuildDynamicIA2Data accessible/ipc/win/HandlerProvider.cpp:316
4 xul.dll mozilla::detail::RunnableMethodImpl<mozilla::a11y::HandlerProvider*, void  xpcom/threads/nsThreadUtils.h:1237
5 xul.dll static mozilla::mscom::MainThreadInvoker::MainThreadAPC ipc/mscom/MainThreadInvoker.cpp:172
6 ntdll.dll RtlDispatchAPC 
7 ntdll.dll KiUserApcDispatch 
8 ntdll.dll NtWaitForSingleObject 
9 kernelbase.dll kernelbase.dll@0x226ed 

Jamie, I see a few possibly-related changes landed by you in that pushlog range. Maybe bug 1644319?

Flags: needinfo?(jteh)

Interesting, the client that instantiated accessibility is called Unchecky and is not an officially supported client. Not sure if it is related, but thought it worth noting that it, in this case, is not JAWS, the only known consumer of window emulation, that instantiated it.

I don't understand why this is crashing yet, but I don't think window emulation is actually enabled. It seems to be crashing when we check whether there is an emulated window handle... but I added a null check to deal with this precise case, so I'm not sure why that isn't working.

Flags: needinfo?(jteh)
Regressed by: 1644323
Has Regression Range: --- → yes
Assignee: nobody → jteh
Severity: -- → S2
Priority: -- → P1

Otherwise, if we're replacing a previous top level doc, we might refer to the old top level doc during initialization.

Pushed by mzehe@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d08313ba26df Set the top level DocAccessibleChild as early as possible. r=MarcoZ
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: