Bug 1645067: Set the top level DocAccessibleChild as early as possible. r=MarcoZ

Otherwise, if we're replacing a previous top level doc, we might refer to the old top level doc during initialization.

Differential Revision: https://phabricator.services.mozilla.com/D79398